# text_adventures_MCS

./: .gitignore  Cargo.toml  savedata.json
src/: arena.rs  entities.rs  lib.rs  main.rs  parser.rs  world_building.rs  world_building_tests.rs
src/entities/: feature.rs  interactive.rs  item.rs  player.rs  room.rs
tests/: test_world_building.rs
