[package]
name = "text_adventure"
version = "0.1.0"
authors = ["Mark Antill <mark.antill@countercept.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.8"
itertools = "0.8.1"
log-derive = "0.3.1"
log = "0.4"
simplelog = "*"