[package]
name = "text_adventure"
version = "0.1.0"
authors = ["Mark Antill <mark.antill@countercept.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.*"
itertools = "0.*"
log-derive = "0.*"
log = "0.*"
simplelog = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
nom = "5.*"
typed-arena = "*"
